# alphinity

./: .coveragerc  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
alphinity/: __init__.py  __main__.py
scripts/: format.sh  lint.sh  test.sh
